<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_height="match_parent"
        tools:context="de.dnldttmr.workouttracker.SingleExerciseView"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_singleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_exerciseName"
            android:textSize="24dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_singleMuscleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_muscleGroup"
            android:textSize="22dp"/>
    
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:gravity="center_horizontal">
            <de.dnldttmr.workouttracker.design.CircularImage
                android:id="@+id/iv_singleMuscleGroup"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/no_picture"/>
            <Button
                android:id="@+id/btn_singleVideo"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/video_preview"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_singleDescription"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:scrollbars="vertical"
            android:minLines="11"
            android:maxLines="11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_description"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/tv_singleLink"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_link"/>

    </LinearLayout>